feat: delete buttons

--- a/organidata.github.io/index.html
+++ b/organidata.github.io/index.html
@@ -156,7 +156,7 @@
         </h2>
         
         <p>
-          <a class="button cta rounded primary-btn raised" href="#">
+          <a class="button cta rounded primary-btn raised" href="mailto:organidata@gmail.com">
             Inscríbete
           </a>
         </p>
@@ -234,9 +234,6 @@
             <div class="card-text">
                 <p>No es necesario tener conocimientos previos, empezamos a porgramar desde el dia cero y te acompaniamos todo el camino.</p>
             </div>
-            <div class="card-action">
-              <a href="" class="button btn-align-md accent-btn raised"></a>
-            </div>
           </div>
         </div>
         <div class="column is-one-third">
@@ -250,9 +247,6 @@
             <div class="card-text">
                 <p>Creamos un espacio en el que podras hacer todas las preguntas con las que te sientas comodo y te damos devolcuiones sobre tu progreso y sugerencias personalizas para mejorar.</p>
             </div>
-            <div class="card-action">
-              <a href="" class="button btn-align-md accent-btn raised"></a>
-            </div>
           </div>
         </div>
         <div class="column is-one-third">
@@ -265,9 +259,6 @@
             </div>
             <div class="card-text">
                 <p>Desarrolla un proyecto final en el que aplicar todo lo aprendido que consiste en un analisis completo, desde la extraccion de datos hasta la presentacion. Tal como en un trabajo real!</p>
-            </div>
-            <div class="card-action">
-              <a href="" class="button btn-align-md accent-btn raised"></a>
             </div>
           </div>
         </div>
@@ -360,7 +351,7 @@
     </div>
 
     <p class="has-text-centered mt-20">
-      <a class="button cta is-large rounded secondary-btn raised" href="#">
+      <a class="button cta is-large rounded secondary-btn raised" href="mailto:organidata@gmail.com">
         Escribenos
       </a>
     </p>
